updated with date

--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
                 <span class="ampm">82</span>
             </div>
         </div>
+        <div class="date">
+            <span class="day">AS</span>
+            <span class="separator">/</span>
+            <span class="month">HI</span>
+            <span class="separator">/</span>
+            <span class="year">K082</span>
+        </div>
     </div>
 
     <script src="script.js"></script>
